--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "recharts": "2.15.4",
+    "recharts": "3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
@@ -45,8 +45,8 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4.1.13",
-    "@types/node": "^20.19.17",
-    "@types/react": "^19.1.13",
+    "@types/node": "24.5.2",
+    "@types/react": "^19.1.15",
     "@types/react-dom": "^19.1.9",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.4.0",
